--- a/ReservationTable/src/main/resources/templates/admin/panel/customer/edit.html
+++ b/ReservationTable/src/main/resources/templates/admin/panel/customer/edit.html
@@ -1,19 +1,22 @@
 
-	 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"  xmlns="http://www.w3.org/1999/xhtml" layout:decorate="~{layout/system}" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org" layout:decorate="~{layout/system}" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
 <head>
-    <title>Create System Table</title>
-   
+    <title>Edit Customer </title>
+    
 </head>
 <body>
 
 <section layout:fragment="content" class="container">
-	<th:block th:if="${msg} != null">
+	</style>
+		<th:block th:if="${msg} != null">
+		
 		<div class="alert alert-danger alert-dismissible fade show" role="alert">
            <i class="fa fa-exclamation-circle me-2"></i><span th:text="${msg}"></span>
          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
           </div>
+		
 	</th:block>
 	<style>
 .col-sm-10 .form-check {
@@ -22,15 +25,15 @@
 }
 	</style>
 	<br>
-    <h2 style="text-align: center;"><a href="/admin/panel/index" class="btn btn-secondary" style="float: left; "><i class="fa-solid fa-house"></i> Home</a>
-		 Create Table</h2>
+    <h2 style="text-align: center;"><a href="/admin/panel/customer/index" class="btn btn-secondary" style="float: left; "><i class="fa-solid fa-house"></i> Home</a>
+		 Edit Table</h2>
 		 
     <br>
      <div class="bg-light rounded h-100 p-4">
          
-               <form th:action="@{/admin/panel/create/save}" method="post" th:object="${systemDto}">
+               <form th:action="@{/admin/panel/customer/update/save}" method="post" th:object="${customerDto}">
                      <div class="mb-3">
-                         <label for="exampleInputEmail1" class="form-label" style="font-weight: 600; color: black;">Full Name</label>
+                         <label class="form-label" style="font-weight: 600; color: black;">Full Name</label>
                                 <input type="text" class="form-control" aria-describedby="emailHelp" th:field="*{fullname}">
                                 <div class="form-text">
 									<span  th:if="${#fields.hasErrors('fullname')}" th:errors="*{fullname}"style="color: red;"></span>
@@ -38,7 +41,7 @@
                       </div>
                         	
 							 <div class="mb-3">
-                         <label for="exampleInputEmail1" class="form-label" style="font-weight: 600; color: black;">Email</label>
+                         <label class="form-label" style="font-weight: 600; color: black;">Email</label>
                                 <input type="text" class="form-control" aria-describedby="emailHelp" th:field="*{email}">
                                 <div class="form-text">
 									<span  th:if="${#fields.hasErrors('email')}" th:errors="*{email}"style="color: red;"></span>
@@ -46,14 +49,14 @@
                          </div>
                         	
 							<div class="mb-3">
-                         <label for="exampleInputEmail1" class="form-label" style="font-weight: 600; color: black;">Phone Number</label>
+                         <label class="form-label" style="font-weight: 600; color: black;">Phone Number</label>
                                 <input type="text" class="form-control" aria-describedby="emailHelp" th:field="*{phoneNumber}">
                                 <div class="form-text">
 									<span  th:if="${#fields.hasErrors('phoneNumber')}" th:errors="*{phoneNumber}"style="color: red;"></span>
                                    </div>
                                 </div>
                         	<div class="mb-3">
-                         <label for="exampleInputEmail1" class="form-label" style="font-weight: 600; color: black;">Address</label>
+                         <label class="form-label" style="font-weight: 600; color: black;">Address</label>
                                 <input type="text" class="form-control" aria-describedby="emailHelp" th:field="*{address}">
                                 <div class="form-text">
 									<span  th:if="${#fields.hasErrors('address')}" th:errors="*{address}"style="color: red;"></span>
@@ -61,7 +64,7 @@
                                 </div>
                         	
 							<div class="mb-3">
-                         <label for="exampleInputEmail1" class="form-label" style="font-weight: 600; color: black;">Email</label>
+                         <label class="form-label" style="font-weight: 600; color: black;">Email</label>
                                 <input type="date" class="form-control" aria-describedby="emailHelp" th:field="*{dateOfBirth}">
                                 <div class="form-text">
 									<span  th:if="${#fields.hasErrors('dateOfBirth')}" th:errors="*{dateOfBirth}"style="color: red;"></span>
@@ -73,13 +76,13 @@
                                     <div class="col-sm-10" style="display: inline-block;">
                                         <div class="form-check">
                                             <input class="form-check-input" type="radio" th:field="*{gender}" th:value="true" checked="">
-                                            <label class="form-check-label" for="gridRadios1">
+                                            <label class="form-check-label">
                                                 Male
                                             </label>
                                         </div>
                                         <div class="form-check">
                                             <input class="form-check-input" type="radio"  th:field="*{gender}" th:value="false">
-                                            <label class="form-check-label" for="gridRadios2">
+                                            <label class="form-check-label">
                                                 Female
                                             </label>
                                         </div>
@@ -87,21 +90,20 @@
                                 </fieldset>
 							<div class="mb-3">
                         <select th:field="*{roleId}" class="form-control" title="-----Select Role-----">
-         					<th:block th:each="i : ${systemDto.roleList}">
+         					<th:block th:each="i : ${customerDto.roleList}">
          						<th:block th:if="${i.id} !=1">
 									 <option th:value="${i.id}" th:text="${i.name}"></option>
 								 </th:block>
 							 </th:block>
            					 </select>
                         </div>	
-							
+							<input type="hidden" th:field="*{id}">
                        
                         <button type="submit" class="btn btn-primary">Submit</button>
               	</form>
         </div>
     
+   
 </section>
 </body>
 </html>
-
--->
