--- a/ReservationTable/src/main/resources/templates/admin/panel/customer/index.html
+++ b/ReservationTable/src/main/resources/templates/admin/panel/customer/index.html
@@ -4,7 +4,7 @@
       layout:decorate="~{layout/system}" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
 <head>
-    <title>Index System Table</title>
+    <title>Index Customer</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
@@ -37,8 +37,8 @@
     <h2 style="text-align: center;">
 		<a href="/admin/panel/index" class="btn btn-secondary" style="float: left; "><i class="fa-solid fa-house"></i> Home</a>
 			
-		System Tables   
-		<a href="/admin/panel/create" class="btn btn-success" style="float: right; "><i class="fa-solid fa-plus"></i> Add</a>
+		Customers Table
+		<a href="/admin/panel/customer/create" class="btn btn-success" style="float: right; "><i class="fa-solid fa-plus"></i> Add</a>
 	 </h2>
     <br>
     <table id="myTable" class="display">
